ui_tests/tests/should-fail/2_5-top-mod-attributes-below.rs
fn main() {}

#[mod_template::define]
#[an_attribute]
mod __ {}
